--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "axios": "^0.17.0",
     "expo": "^22.0.0",
+    "lodash": "^4.17.4",
     "react": "16.0.0-beta.5",
     "react-native": "https://github.com/expo/react-native/archive/sdk-22.0.2.tar.gz",
     "react-native-elements": "^0.18.2",
