--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "16.0.0-beta.5",
     "react-native": "https://github.com/expo/react-native/archive/sdk-22.0.2.tar.gz",
     "react-native-elements": "^0.18.2",
+    "react-native-gesture-handler": "^1.0.0-alpha.27",
     "react-navigation": "^1.0.0-beta.19",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
